dashboard component added
Dashboard component
screenshots
Readme update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,8 +15,7 @@
 				<form>
 				  <div class="form-group">
 					<label for="txtUsername">Username</label>
-					<input [(ngModel)]="txtUsername" name="txtUsername" type="email" class="form-control" id="txtUsername" aria-describedby="emailHelp" placeholder="EmailId">
-					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					<input [(ngModel)]="txtUsername" name="txtUsername" type="email" class="form-control" id="txtUsername" aria-describedby="emailHelp" placeholder="EmailId" />
 				  </div>
 				  <div class="form-group">
 					<label for="txtPassword">Password</label>
